alteração do background-color

--- a/aula06/pratica,ex2,3,4.html
+++ b/aula06/pratica,ex2,3,4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Sales </title>
     <style>
-body { background-color: darkolivegreen;}
+body { background-color: rgb(12, 9, 224);}
 h1 {color: rgb(80, 1, 43); font: normal, 20pt, Arial}
 ga {color: darkred;}
 gg {color: darkred;}
